--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,59 @@
 <h1>
     HELLO WORLD
 </h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>House Price Prediction</title>
+    <style>
+        .container {
+            width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            background-color: #f9f9f9;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h2>Boston House Price Prediction</h2>
+        <form action="{{ url_for('predict')}}" method="post">
+            <input type="text" name="MedInc" placeholder="MedInc" required><br>
+            <input type="text" name="HouseAge" placeholder="HouseAge" required><br>
+            <input type="text" name="AveRooms" placeholder="AveRooms" required><br>
+            <input type="text" name="AveBedrms" placeholder="AveBedrms" required><br>
+            <input type="text" name="Population" placeholder="Population" required><br>
+            <input type="text" name="AveOccup" placeholder="AveOccup" required><br>
+            <input type="text" name="Latitude" placeholder="Latitude" required><br>
+            <input type="text" name="Longitude" placeholder="Longitude" required><br>
+            <button type="submit">Predict</button>
+        </form>
+    </div>
+
+    {{ prediction_text }}
+</body>
+
+</html>
